removal: replace remaining Integer constructors